test/classes/vass/class-new-error.good
class-new-error.chpl:4: error: type in 'new' expression is missing its argument list
